--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.6.9.Final</version>
+    </dependency>
   </dependencies>
 </project>
