Getting to Know Session. Adding an Entity to a Table

--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
       <version>42.7.5</version>
     </dependency>
     <dependency>
-      <groupId>org.hibernate.orm</groupId>
+      <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>6.6.9.Final</version>
+      <version>6.4.4.Final</version>
     </dependency>
   </dependencies>
 </project>
